Add yarn start:dev command to remove need for docker compose (hopefully) (#1520)
* add yarn start:dev command

* Update README.md

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
+    "start:dev": "redis-server 2>&1 & ./bin/generate-ssl-options.sh && cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node server.js",
     "build": "NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack.config.js",
     "dev": "./bin/generate-ssl-options.sh && cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider POSTCODE_LOOKUP_TOKEN=$(sh ./bin/pull_postcode_token.sh) node server.js",
     "debug": "NODE_ENV=development cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider node --inspect server.js",
