--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@hmcts/cookie-manager": "^1.0.0",
     "@hmcts/div-idam-express-middleware": "^6.6.2",
     "@hmcts/nodejs-healthcheck": "^1.8.0",
-    "@hmcts/one-per-page": "^5.4.0",
+    "@hmcts/one-per-page": "^6.0.1",
     "@hmcts/properties-volume": "^1.1.0",
     "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^2.0.4",
@@ -71,6 +71,7 @@
     "helmet": "^7.0.0",
     "html-entities": "^2.4.0",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.13.3",
     "jquery": "^3.7.1",
     "jquery-modal": "^0.9.2",
     "js-base64": "^3.7.5",
@@ -78,7 +79,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.1",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "nunjucks": "^3.2.4",
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
