--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,4 +28,5 @@ sonar.exclusions=app.js,\
   views/components/web-chat.html,\
   Dockerfile,\
   format-v4-audit.js,\
-  webpack.config.js
+  webpack.config.js \
+  playwright.config.js
