--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
-    "test:smoke": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test codeceptjs run -c test/e2e/smoke.conf.js --grep @smoke --steps --verbose --reporter mocha-multi",
+    "test:smoke": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test npx playwright test --project chromium --grep @smoke --steps --verbose --reporter mocha-multi",
     "test:evidence-upload": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run -c test/e2e/ --grep @evidence-upload --steps",
-    "test:mutation": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple parallel --all -c test/e2e/ --grep @functional --steps --reporter mocha-multi",
-    "test:functional": "cross-env NODE_PATH=. NODE_ENV=test yarn playwright install && npx playwright test --project chromium",
-    "test:fullfunctional": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple parallel --all -c test/e2e/ --grep 'functional|fullFunctional' --steps --reporter mocha-multi",
+    "test:mutation": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test npx playwright test --project chromium --grep @functional",
+    "test:functional": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test && npx playwright test --project chromium",
+    "test:fullfunctional": "cross-env NODE_PATH=. NODE_ENV=test npx playwright test --project chromium --grep 'functional|fullFunctional' --steps --reporter mocha-multi",
     "test:e2e-pages": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run-multiple pages -c test/e2e/ --steps --reporter mocha-multi",
     "test:functional:batch": "cross-env NODE_PATH=. NODE_ENV=test codeceptjs run -c test/e2e/ --grep @batch-$BATCH --steps",
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
