removing country and portOfEntry lists from sonarqube due to duplication false positive

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,4 +28,6 @@ sonar.exclusions=app.js,\
   views/components/web-chat.html,\
   Dockerfile,\
   format-v4-audit.js,\
-  webpack.config.js
+  webpack.config.js \
+  utils/countriesList.js \
+  utils/portOfEntryList.js
