refactoring js list file to json

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,6 +28,4 @@ sonar.exclusions=app.js,\
   views/components/web-chat.html,\
   Dockerfile,\
   format-v4-audit.js,\
-  webpack.config.js \
-  utils/countriesList.js \
-  utils/portOfEntryList.js
+  webpack.config.js
