--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^2.0.4",
     "applicationinsights": "^2.7.3",
+    "axios": "^1.7.7",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
