--- a/charts/sscs-tribunals-frontend/values.yaml
+++ b/charts/sscs-tribunals-frontend/values.yaml
@@ -9,8 +9,8 @@ nodejs:
     enabled: false
   environment:
     NODE_ENV: "production"
-    TRIBUNALS_CASE_API_URL: https://sscs-tribunals-api-pr-3978.preview.platform.hmcts.net
-    UPLOAD_EVIDENCE_URL: https://sscs-tribunals-api-pr-3978.preview.platform.hmcts.net/evidence/upload
+    TRIBUNALS_CASE_API_URL: http://sscs-tribunals-api-pr-3978.preview.platform.hmcts.net
+    UPLOAD_EVIDENCE_URL: http://sscs-tribunals-api-pr-3978.preview.platform.hmcts.net/evidence/upload
     SERVICES_IDAM_LOGIN_URL: https://idam-web-public.{{ .Values.global.environment }}.platform.hmcts.net/login
     SERVICES_IDAM_API_URL: https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net
     # seems to be disabled currently and only enabled locally pointing at AAT
