--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "@hmcts/properties-volume": "^1.1.0",
     "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^2.0.4",
-    "applicationinsights": "^2.7.3",
-    "axios": "^1.7.7",
+    "applicationinsights": "^3.4.0",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
@@ -136,6 +135,7 @@
   "resolutions": {
     "express": "^4.21.0",
     "debug": "^3.2.7",
+    "import-in-the-middle": "^1.8.1",
     "json-schema": "^0.4.0",
     "qs": "^6.11.2",
     "redis": "^3.1.1",
