--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -19,7 +19,7 @@ nodejs:
     WEBCHAT_OPENING_TIME_8_5: true
     FT_WELSH: true
     PCQ_ENABLED: true
-    HAS_IBC_RELEASED: false
+    HAS_IBC_RELEASED: true
   keyVaults:
     sscs:
       secrets:
