--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
-    "test:playwright": "yarn playwright install && cross-env TRIBUNALS_CASE_API_URL=http://sscs-tribunals-api-aat.service.core-compute-aat.internal NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
+    "test:playwright": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
     "test:smoke": "yarn playwright install && NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/smoke.conf.js --grep \"@smoke\"",
     "test:evidence-upload": "yarn test:playwright --grep \"@evidence-upload\"",
     "test:mutation": "yarn test:playwright --grep \"@functional\"",
     "test:functional": "yarn test:playwright --grep \"@functional\"",
     "test:fullfunctional": "yarn test:playwright --grep \"@functional|@fullFunctional\"",
-    "test:e2e-pages": "cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/pages.config.js",
+    "test:e2e-pages": "E2E_TEST_DIR=\"./page\" yarn test:playwright",
     "test:functional:batch": "yarn test:playwright --grep \"@batch-$BATCH\"",
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
     "test:coverage": "cross-env NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
