testing smoke and crossbrowser

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
-    "test:playwright": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
-    "test:smoke": "yarn playwright install && NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/smoke.conf.js --grep \"@smoke\"",
+    "test:playwright": "yarn playwright install chrome && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
+    "test:smoke": "E2E_OUTPUT_DIR=\"./smoke-output\" E2E_TEST_DIR=\"./smoke\" yarn test:playwright --grep \"@smoke\"",
     "test:evidence-upload": "yarn test:playwright --grep \"@evidence-upload\"",
     "test:mutation": "yarn test:playwright --grep \"@functional\"",
     "test:functional": "yarn test:playwright --grep \"@functional\"",
