--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
-    "test:playwright": "yarn playwright install chrome && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js --project chrome ",
-    "test:smoke": "E2E_OUTPUT_DIR=\"./smoke-output\" E2E_TEST_DIR=\"./smoke\" yarn test:playwright --grep \"@smoke\"",
-    "test:evidence-upload": "yarn test:playwright --grep \"@evidence-upload\"",
-    "test:mutation": "yarn test:playwright --grep \"@functional\"",
-    "test:functional": "yarn test:playwright --grep \"@functional\"",
-    "test:fullfunctional": "yarn test:playwright --grep \"@functional|@fullFunctional\"",
-    "test:e2e-pages": "E2E_TEST_DIR=\"./page\" yarn test:playwright",
-    "test:functional:batch": "yarn test:playwright --grep \"@batch-$BATCH\"",
+    "test:playwright": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
+    "test:smoke": "E2E_OUTPUT_DIR=\"./smoke-output\" E2E_TEST_DIR=\"./smoke\" yarn test:playwright --grep \"@smoke\" --project chrome",
+    "test:evidence-upload": "yarn test:playwright --grep \"@evidence-upload\" --project chrome",
+    "test:mutation": "yarn test:playwright --grep \"@functional\" --project chrome",
+    "test:functional": "yarn test:playwright --grep \"@functional\" --project chrome",
+    "test:fullfunctional": "yarn test:playwright --grep \"@functional|@fullFunctional\" --project chrome",
+    "test:e2e-pages": "E2E_TEST_DIR=\"./page\" yarn test:playwright --project chrome",
+    "test:functional:batch": "yarn test:playwright --grep \"@batch-$BATCH\" --project chrome",
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
     "test:coverage": "cross-env NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
-    "test:crossbrowser": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js --grep \"@crossbrowser\"",
+    "test:crossbrowser": "E2E_OUTPUT_DIR=\"./crossbrowser-output\" E2E_TEST_DIR=\"./\" yarn test:playwright --grep \"@crossbrowser\"",
     "test:a11y": "cross-env NODE_PATH=. NODE_ENV=a11y LOG_LEVEL=ERROR mocha --exit test/accessibility/a11y.js --exit --timeout 60000 --reporter mochawesome --reporter-options reportDir=functional-output,reportFilename=a11y,inlineAssets=true,reportTitle=submit-your-appeal",
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
