--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:e2e-pages": "E2E_TEST_DIR=\"./page\" yarn test:playwright --project chrome",
     "test:functional:batch": "yarn test:playwright --grep \"@batch-$BATCH\" --project chrome",
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
-    "test:coverage": "cross-env NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
+    "test:coverage": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
     "test:crossbrowser": "yarn playwright install msedge && E2E_OUTPUT_DIR=\"./crossbrowser-report\" E2E_TEST_DIR=\"./\" yarn test:playwright --grep \"@crossbrowser\"",
     "test:a11y": "cross-env NODE_PATH=. NODE_ENV=a11y LOG_LEVEL=ERROR mocha --exit test/accessibility/a11y.js --exit --timeout 60000 --reporter mochawesome --reporter-options reportDir=functional-output,reportFilename=a11y,inlineAssets=true,reportTitle=submit-your-appeal",
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
@@ -109,7 +109,6 @@
     "webpack-merge": "^6.0.1"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.26.5",
     "@babel/register": "^7.24.6",
     "@hmcts/eslint-config": "^1.4.0",
     "chai": "^4.1.2",
