--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
-    "test:playwright": "yarn playwright install && yarn playwright install msedge && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
+    "test:playwright": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
     "test:smoke": "E2E_OUTPUT_DIR=\"./smoke-report\" E2E_TEST_DIR=\"./smoke\" yarn test:playwright --grep \"@smoke\" --project chrome",
     "test:evidence-upload": "yarn test:playwright --grep \"@evidence-upload\" --project chrome",
     "test:mutation": "E2E_OUTPUT_DIR=\"./mutation-report\" yarn test:playwright --grep \"@functional\" --project chrome",
