--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "cross-env NODE_PATH=. eslint --fix .",
     "test:playwright": "yarn playwright install && cross-env NODE_PATH=. NODE_ENV=test playwright test --config=test/e2e/playwright.config.js",
     "test:smoke": "E2E_OUTPUT_DIR=\"./smoke-report\" E2E_TEST_DIR=\"./smoke\" yarn test:playwright --grep \"@smoke\" --project chrome",
+    "test:ibca-smoke": "E2E_OUTPUT_DIR=\"./e2e-playwright-structure-bp/smoke-report\" E2E_TEST_DIR=\"./e2e-playwright-structure-bp/tests/ibca\" yarn test:playwright --grep \"@ibca-smoke\" --project chrome",
     "test:evidence-upload": "yarn test:playwright --grep \"@evidence-upload\" --project chrome",
     "test:mutation": "E2E_OUTPUT_DIR=\"./mutation-report\" yarn test:playwright --grep \"@functional\" --project chrome",
     "test:functional": "yarn test:playwright --grep \"@functional\" --project chrome",
