--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:smoke": "E2E_OUTPUT_DIR=\"./smoke-report\" E2E_TEST_DIR=\"./smoke\" yarn test:playwright --grep \"@smoke\" --project chrome",
     "test:evidence-upload": "yarn test:playwright --grep \"@evidence-upload\" --project chrome",
     "test:mutation": "E2E_OUTPUT_DIR=\"./mutation-report\" yarn test:playwright --grep \"@functional\" --project chrome",
-    "test:functional": "yarn test:playwright --grep \"@functional\" --project chrome",
+    "test:functional": "yarn test:playwright --grep \"@functional|@fullFunctional\" --project chrome",
     "test:fullfunctional": "yarn test:playwright --grep \"@functional|@fullFunctional\" --project chrome",
     "test:e2e-pages": "E2E_TEST_DIR=\"./page\" yarn test:playwright --project chrome",
     "test:functional:batch": "yarn test:playwright --grep \"@batch-$BATCH\" --project chrome",
