--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "pa11y": "^8.0.0",
     "playwright": "^1.50.0",
     "pre-commit": "^1.2.2",
+    "prettier": "3.4.2",
     "proxyquire": "^2.1.3",
     "puppeteer": "^23.2.0",
     "rewire": "^7.0.0",
