--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
   "endOfLine": "lf",
   "singleQuote": true,
   "semi": true,
-  "printWidth": 80,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "trailingComma": "none"
 }
