--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "nunjucks-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "parse-full-name": "^1.2.6",
+    "prettier-plugin-jinja-template": "^2.0.0",
     "redis": "^4.6.8",
     "require-directory": "^2.1.1",
     "sass": "^1.77.8",
