--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
     "test:coverage": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
     "test:crossbrowser": "E2E_OUTPUT_DIR=\"./crossbrowser-report\" E2E_TEST_DIR=\"./\" yarn test:playwright --grep \"@crossbrowser\"",
-    "test:a11y": "cross-env NODE_PATH=. NODE_ENV=a11y LOG_LEVEL=ERROR mocha --exit test/accessibility/a11y.js --exit --timeout 60000 --reporter mochawesome --reporter-options reportDir=functional-output,reportFilename=a11y,inlineAssets=true,reportTitle=submit-your-appeal",
+    "test:accessibility": "CHUNKS=4 RETRIES=1 E2E_OUTPUT_DIR=\"./accessibility-report\" yarn test:playwright --grep \"@accessibility\" --project chrome",
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
     "mock-ccd": "node mocks/ccd/server.js"
@@ -48,6 +48,7 @@
     "lint"
   ],
   "dependencies": {
+    "@axe-core/playwright": "^4.10.1",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@cypress/request": "^3.0.0",
