--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
     "test:coverage": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
     "test:crossbrowser": "E2E_OUTPUT_DIR=\"./crossbrowser-report\" E2E_TEST_DIR=\"./\" yarn test:playwright --grep \"@crossbrowser\"",
+    "test:a11y": "echo \"a11y done later\"",
     "test:accessibility": "CHUNKS=4 RETRIES=1 E2E_OUTPUT_DIR=\"./accessibility-report\" yarn test:playwright --grep \"@accessibility\" --project chrome",
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
