--- a/package.json
+++ b/package.json
@@ -12,19 +12,15 @@
     "build": "NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider webpack --config webpack.config.js",
     "dev": "./bin/generate-ssl-options.sh && cross-env NODE_ENV=development NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider POSTCODE_LOOKUP_TOKEN=$(sh ./bin/pull_postcode_token.sh) nodemon server.js",
     "debug": "NODE_ENV=development cross-env NODE_PATH=. NODE_OPTIONS=--openssl-legacy-provider nodemon --inspect server.js",
-    "iba:shuttered:start:dev": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=false IS_IBA=true yarn start:dev",
-    "iba:shuttered:dev": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=false IS_IBA=true yarn dev",
-    "iba:shuttered:debug": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=false IS_IBA=true yarn debug",
-    "iba:start:dev": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true IS_IBA=true yarn start:dev",
-    "iba:dev": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true IS_IBA=true yarn dev",
-    "iba:debug": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true IS_IBA=true yarn debug",
+    "iba:start:dev": "cross-env IS_IBA=true yarn start:dev",
+    "iba:dev": "cross-env IS_IBA=true yarn dev",
+    "iba:debug": "cross-env IS_IBA=true yarn debug",
     "iba:dev:aat": "cross-env TRIBUNALS_CASE_API_URL=http://sscs-tribunals-api-aat.service.core-compute-aat.internal yarn iba:dev",
-    "iba:shuttered:dev:aat": "cross-env TRIBUNALS_CASE_API_URL=http://sscs-tribunals-api-aat.service.core-compute-aat.internal yarn iba:shuttered:dev",
     "iba:debug:aat": "cross-env TRIBUNALS_CASE_API_URL=http://sscs-tribunals-api-aat.service.core-compute-aat.internal yarn iba:debug",
     "setup": "exit 0",
     "mock": "yarn mock-uploader & yarn debug",
-    "test:unit": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true NODE_PATH=. NODE_ENV=test mocha --exit 'test/unit/**/*.test.js'",
-    "test:assets": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true NODE_PATH=. NODE_ENV=test NODE_OPTIONS=--openssl-legacy-provider mochapack 'test/assets/**/*.test.js' --webpack-config test/webpack.config.js --require @babel/register",
+    "test:unit": "cross-env NODE_PATH=. NODE_ENV=test mocha --exit 'test/unit/**/*.test.js'",
+    "test:assets": "cross-env NODE_PATH=. NODE_ENV=test NODE_OPTIONS=--openssl-legacy-provider mochapack 'test/assets/**/*.test.js' --webpack-config test/webpack.config.js --require @babel/register",
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
@@ -37,7 +33,7 @@
     "test:e2e-pages": "E2E_TEST_DIR=\"./page\" yarn test:playwright --project chrome",
     "test:functional:batch": "yarn test:playwright --grep \"@batch-$BATCH\" --project chrome",
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
-    "test:coverage": "cross-env INFECTED_BLOOD_COMPENSATION_ENABLED=true NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
+    "test:coverage": "cross-env NODE_PATH=. NODE_ENV=test nyc mocha 'test/unit/**/*.test.js'",
     "test:crossbrowser": "E2E_OUTPUT_DIR=\"./crossbrowser-output\" E2E_REPORT_DIR=\"./crossbrowser-report\" E2E_TEST_DIR=\"./\" yarn test:playwright --grep \"@crossbrowser\"",
     "test:a11y": "echo \"a11y replaced with axe in separate stage.\"",
     "test:accessibility": "CHUNKS=4 RETRIES=3 E2E_OUTPUT_DIR=\"./accessibility-output\" E2E_REPORT_DIR=\"./accessibility-report\" yarn test:playwright --grep \"@accessibility\" --project chrome",
