--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test:smoke": "E2E_TEST_TAGS=\"@smoke\" E2E_OUTPUT_DIR=\"./smoke-output\" E2E_REPORT_DIR=\"./smoke-report\" E2E_TEST_DIR=\"./smoke\" yarn test:playwright --project chrome",
     "test:evidence-upload": "E2E_TEST_TAGS=\"@evidence-upload\" yarn test:playwright --project chrome",
     "test:mutation": "E2E_TEST_TAGS=\"@functional\" E2E_OUTPUT_DIR=\"./mutation-output\" E2E_REPORT_DIR=\"./mutation-report\" yarn test:playwright --project chrome",
-    "test:functional": "E2E_TEST_TAGS=$E2E_FULL_F_TAGS yarn test:playwright --project chrome",
-    "test:fullfunctional": "E2E_TEST_TAGS=$E2E_FULL_F_TAGS yarn test:playwright --project chrome",
+    "test:functional": "yarn test:playwright --project chrome",
+    "test:fullfunctional": "yarn test:playwright --project chrome",
     "test:e2e-pages": "E2E_TEST_DIR=\"./page\" yarn test:playwright --project chrome",
     "test:functional:batch": "E2E_TEST_TAGS=\"@batch-$BATCH\" yarn test:playwright --project chrome",
     "test:functional:batches": "for i in `seq -w 1 12`; do BATCH=$i yarn test:functional:batch; [ $? -ne 0 ] && exit $?; done; exit 0;",
