--- a/charts/sscs-tribunals-frontend/Chart.yaml
+++ b/charts/sscs-tribunals-frontend/Chart.yaml
@@ -8,8 +8,8 @@ maintainers:
   - name: HMCTS SSCS Team
 dependencies:
   - name: nodejs
-    version: 3.1.0
-    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    version: 3.2.0
+    repository: 'oci://hmctspublic.azurecr.io/helm'
   - name: redis
     version: 17.0.11
     repository: "https://charts.bitnami.com/bitnami"
