--- a/package.json
+++ b/package.json
@@ -146,7 +146,9 @@
     "qs": "^6.11.2",
     "redis": "^3.1.1",
     "micromatch": "^4.0.8",
-    "path-to-regexp": "^0.1.10"
+    "path-to-regexp": "^0.1.10",
+    "@babel/helpers": "7.26.10",
+    "@babel/runtime": "7.26.10"
   },
   "packageManager": "yarn@4.4.1"
 }
