--- a/package.json
+++ b/package.json
@@ -148,7 +148,8 @@
     "micromatch": "^4.0.8",
     "path-to-regexp": "^0.1.10",
     "@babel/helpers": "^7.26.10",
-    "@babel/runtime": "^7.26.10"
+    "@babel/runtime": "^7.26.10",
+    "cookie": "^0.7.2"
   },
   "packageManager": "yarn@4.4.1"
 }
