--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,7 @@ sonar.exclusions=app.js,\
   steps/pcq/createToken.js,\
   infrastructure/**,\
   node_modules/**,\
-  mocks/**,test/**,\
+  mocks/**,\
   assets/**,\
   dist/**,\
   cookie-banner/**,\
