--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,8 @@ sonar.projectName='SSCS :: Submit Your Appeal frontend'
 sonar.projectKey=SSCSSYAF
 sonar.language=typescript
 sonar.sources=.
+sonar.tests=test
+sonar.test.inclusions=test/**/*.test.js
 sonar.cpd.exclusions=steps/**
 sonar.javascript.lcov.reportPaths=test/unit/coverage/html/lcov.info
 sonar.exclusions=app.js,\
@@ -16,7 +18,7 @@ sonar.exclusions=app.js,\
   steps/pcq/createToken.js,\
   infrastructure/**,\
   node_modules/**,\
-  mocks/**,test/**,\
+  mocks/**,\
   assets/**,\
   dist/**,\
   cookie-banner/**,\
