ignore config in sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,8 @@ sonar.javascript.lcov.reportPaths=test/unit/coverage/html/lcov.info
 sonar.exclusions=app.js,\
   appConfigurations.js,\
   app-insights.js,\
+  eslint.config.mjs,\
+  test/eslint.config.mjs,\
   server.js,\
   services/start-local-dev-server.js,\
   config/**,\
