--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "setup": "exit 0",
     "mock": "yarn mock-uploader & yarn debug",
     "test:unit": "cross-env NODE_PATH=. NODE_ENV=test mocha --exit 'test/unit/**/*.test.js'",
-    "test:assets": "cross-env NODE_PATH=. NODE_ENV=test NODE_OPTIONS=--openssl-legacy-provider mochapack 'test/assets/**/*.test.js' --webpack-config test/webpack.config.js --require @babel/register",
+    "test:assets": "cross-env NODE_PATH=. NODE_ENV=test NODE_OPTIONS=--openssl-legacy-provider instant-mocha 'test/assets/**/*.test.js' --webpack-config test/webpack.config.js --require @babel/register",
     "test": "yarn test:unit && yarn test:assets",
     "test:all": "cross-env NODE_PATH=. NODE_ENV=test yarn test && yarn test:assets && yarn test:smoke",
     "lint": "cross-env NODE_PATH=. eslint --fix .",
@@ -60,6 +60,7 @@
     "accessible-autocomplete": "^3.0.0",
     "applicationinsights": "^2.9.6",
     "babel-loader": "^10.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "body-parser": "^1.20.3",
     "chalk": "^4.1.2",
     "clean-webpack-plugin": "^4.0.0",
@@ -80,6 +81,7 @@
     "helmet": "^8.0.0",
     "html-entities": "^2.4.0",
     "http-status-codes": "^2.2.0",
+    "instant-mocha": "^1.5.3",
     "jquery": "^3.7.1",
     "jquery-modal": "^0.9.2",
     "js-base64": "^3.7.5",
@@ -121,11 +123,7 @@
     "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
     "jsdom": "^16.5.0",
-    "mocha": "^11.0.0",
-    "mocha-multi": "^1.1.0",
-    "mocha-param": "^2.0.0",
-    "mochapack": "^2.1.4",
-    "mochawesome": "^7.0.0",
+    "mocha": "^10.8.2",
     "nock": "^13.3.3",
     "nodemon": "^3.1.7",
     "nyc": "^17.0.0",
