--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -23,6 +23,10 @@
     {
       "matchPackageNames": ["express"],
       "allowedVersions": "4.x"
+    },
+    {
+      "matchPackageNames": ["path-to-regexp"],
+      "allowedVersions": "0.x"
     }
   ]
 }
