--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.cpd.exclusions=steps/**
 sonar.javascript.lcov.reportPaths=test/unit/coverage/html/lcov.info
 sonar.exclusions=app.js,\
   appConfigurations.js,\
+  test/util/*.js,\
   app-insights.js,\
   eslint.config.mjs,\
   test/eslint.config.mjs,\
