--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,7 @@ sonar.javascript.lcov.reportPaths=test/unit/coverage/html/lcov.info
 sonar.exclusions=app.js,\
   appConfigurations.js,\
   test/util/*.js,\
+  test/e2e/*.js,\
   app-insights.js,\
   eslint.config.mjs,\
   test/eslint.config.mjs,\
