sonar exclusion update

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,7 @@ sonar.exclusions=app.js,\
   appConfigurations.js,\
   test/util/*.js,\
   test/e2e/*.js,\
+  test/e2e/e2e-playwright-structure-bp/**,\
   app-insights.js,\
   eslint.config.mjs,\
   test/eslint.config.mjs,\
