--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,8 @@ sonar.javascript.lcov.reportPaths=test/unit/coverage/html/lcov.info
 sonar.exclusions=app.js,\
   appConfigurations.js,\
   test/util/*.js,\
-  test/e2e/** \
+  test/e2e/**/*.js \
+  test/e2e/**/*.ts \
   app-insights.js,\
   eslint.config.mjs,\
   test/eslint.config.mjs,\
