stopping renovate after 4.x as 5+ doesn't work with commonjs

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -27,6 +27,10 @@
     {
       "matchPackageNames": ["path-to-regexp"],
       "allowedVersions": "0.1.x"
+    },
+    {
+      "matchPackageNames": ["chalk"],
+      "allowedVersions": "4.x"
     }
   ]
 }
