--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -29,6 +29,10 @@ nodejs:
 
 redis:
   enabled: true
+  serviceAccount:
+    create: false
+    name: "sscs"
+    automountServiceAccountToken: true
   architecture: standalone
   auth:
     enabled: false
