blocking applicationinsights 3+ from renovate as it breaks idam express middleware

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -27,6 +27,10 @@
     {
       "matchPackageNames": ["path-to-regexp"],
       "allowedVersions": "0.1.x"
+    },
+    {
+      "matchPackageNames": ["applicationinsights"],
+      "allowedVersions": "2.x"
     }
   ]
 }
