--- a/package.json
+++ b/package.json
@@ -148,7 +148,8 @@
     "@babel/helpers": "^7.26.10",
     "@babel/runtime": "^7.26.10",
     "cookie": "^1.0.0",
-    "superagent": "^10.2.2"
+    "superagent": "^10.2.2",
+    "express-session": "^1.18.2"
   },
   "packageManager": "yarn@4.9.2"
 }
