--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@eslint/js": "^9.26.0",
     "@hmcts/cookie-manager": "^1.0.0",
     "@hmcts/div-idam-express-middleware": "^7.0.1",
-    "@hmcts/nodejs-healthcheck": "^1.8.5",
+    "@hmcts/nodejs-healthcheck": "^1.8.6",
     "@hmcts/one-per-page": "^5.4.0",
     "@hmcts/properties-volume": "^1.2.0",
     "@hmcts/uk-bank-holidays": "^1.0.2",
@@ -102,7 +102,7 @@
     "sass": "^1.88.0",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
-    "superagent": "^10.2.1",
+    "superagent": "^10.2.2",
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "^5.3.14",
     "uuid": "^11.1.0",
@@ -134,7 +134,7 @@
     "rewire": "^7.0.0",
     "sinon": "^20.0.0",
     "sinon-chai": "^3.7.0",
-    "supertest": "^7.1.1",
+    "supertest": "^7.1.3",
     "webpack-node-externals": "3.0.0"
   },
   "resolutions": {
@@ -149,7 +149,8 @@
     "@babel/runtime": "^7.26.10",
     "cookie": "^1.0.0",
     "superagent": "^10.2.2",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "form-data": "^4.0.4"
   },
   "packageManager": "yarn@4.9.2"
 }
