--- a/package.json
+++ b/package.json
@@ -150,7 +150,8 @@
     "cookie": "^1.0.0",
     "superagent": "^10.2.2",
     "express-session": "^1.18.2",
-    "form-data": "^4.0.4"
+    "form-data": "^4.0.4",
+    "js-yaml": "^4.1.1"
   },
   "packageManager": "yarn@4.10.0"
 }
