--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -11,7 +11,7 @@ nodejs:
     NODE_ENV: "preview"
     REDIS_URL: redis://${SERVICE_NAME}-redis-master
     APPINSIGHTS_ROLE_NAME: ${SERVICE_NAME}
-    PCQ_URL: "https://pcq.aat.platform.hmcts.net"
+    PCQ_URL: "https://pcq-frontend-pr-1708.preview.platform.hmcts.net"
     WELSH_WEBCHAT_ENABLED: true
     WEBCHAT_URL: "webchat.pp.ctsc.hmcts.net"
     WEBCHAT_CLIENT_URL: "webchat-client.pp.ctsc.hmcts.net"
