--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "jquery-modal": "^0.9.2",
     "js-base64": "^3.7.7",
     "libphonenumber-js": "^1.12.8",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.23",
     "lodash-es": "^4.17.23",
     "mini-css-extract-plugin": "^2.9.2",
     "moment": "^2.30.1",
@@ -152,7 +152,8 @@
     "express-session": "^1.18.2",
     "form-data": "^4.0.4",
     "js-yaml": "^4.1.1",
-    "tar": "^7.5.3"
+    "tar": "^7.5.3",
+    "lodash": "^4.17.23"
   },
   "packageManager": "yarn@4.10.0"
 }
