--- a/package.json
+++ b/package.json
@@ -151,7 +151,8 @@
     "form-data": "^4.0.4",
     "js-yaml": "^4.1.1",
     "tar": "^7.5.3",
-    "lodash": "^4.17.23"
+    "lodash": "^4.17.23",
+    "body-parser": "^1.20.4"
   },
   "packageManager": "yarn@4.10.0"
 }
