--- a/package.json
+++ b/package.json
@@ -42,12 +42,9 @@
     "fortifyScan": "./test/java/gradlew -p test/java fortifyScan",
     "mock-uploader": "node test/file_acceptor/evidence_uploader.js",
     "mock-ccd": "node mocks/ccd/server.js",
-    "format-code": "prettier --write ."
+    "format-code": "prettier --write .",
+    "prepare": "husky"
   },
-  "pre-commit": [
-    "format-code",
-    "lint"
-  ],
   "dependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
@@ -121,12 +118,12 @@
     "fs": "^0.0.1-security",
     "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
+    "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "mocha": "^11.4.0",
     "nock": "^14.0.4",
     "nodemon": "^3.1.10",
     "nyc": "^17.1.0",
-    "pre-commit": "^1.2.2",
     "prettier": "3.6.2",
     "proxyquire": "^2.1.3",
     "rewire": "^9.0.0",
