sonar-qube exclusion update

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -32,4 +32,5 @@ sonar.exclusions=app.js,\
   views/components/web-chat.html,\
   Dockerfile,\
   format-v4-audit.cjs,\
+  transform-v4-to-v3-audit.cjs, \
   webpack.config.js
