--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@hmcts/cookie-manager": "^1.0.0",
     "@hmcts/div-idam-express-middleware": "^7.0.1",
     "@hmcts/nodejs-healthcheck": "^1.8.6",
-    "@hmcts/one-per-page": "^5.4.0",
+    "@hmcts/one-per-page": "file:lib/vendor/one-per-page",
     "@hmcts/properties-volume": "^1.2.0",
     "@hmcts/uk-bank-holidays": "^1.0.2",
     "accessible-autocomplete": "^3.0.1",
@@ -84,6 +84,7 @@
     "html-entities": "^2.6.0",
     "http-status-codes": "^2.3.0",
     "instant-mocha": "^1.5.3",
+    "joi": "^18.0.2",
     "jquery": "^3.7.1",
     "jquery-modal": "^0.9.2",
     "js-base64": "^3.7.7",
@@ -123,6 +124,7 @@
     "fs": "^0.0.1-security",
     "gulp": "^5.0.0",
     "gulp-cli": "^3.0.0",
+    "i18next": "^25.8.0",
     "jsdom": "^26.1.0",
     "mocha": "^11.4.0",
     "nock": "^14.0.4",
