--- a/.nycrc
+++ b/.nycrc
@@ -14,6 +14,7 @@
     "node_modules/**",
     "mocks/**",
     "test/**",
+    "lib/vendor/one-per-page/**",
     "assets/**",
     "dist/**",
     "cookie-banner/**",
