Point to PR50-77 for testing

--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -10,6 +10,8 @@ nodejs:
   environment:
     NODE_ENV: "preview"
     REDIS_URL: redis://${SERVICE_NAME}-redis-master
+    TRIBUNALS_CASE_API_URL: https://sscs-tribunals-api-pr-5077.preview.platform.hmcts.net
+    UPLOAD_EVIDENCE_URL: https://sscs-tribunals-api-pr-5077.preview.platform.hmcts.net/evidence/upload
     APPINSIGHTS_ROLE_NAME: ${SERVICE_NAME}
     PCQ_URL: "https://pcq.aat.platform.hmcts.net"
     WELSH_WEBCHAT_ENABLED: true
